# psi-logger

./: .gitmodules  CMakeLists.txt  README.md  dependencies.cmake
psi/: CMakeLists.txt
psi/include/psi/logger/: LoggerBase.h  LoggerProxy.h  LoggerSingleton.h  ThreadMap.h  generated_ILogger.h  generated_LoggerClient.h
psi/src/psi/logger/: LoggerProxy.cpp  LoggerSingleton.cpp  ThreadMap.cpp  ThreadMap.hpp
sources/psi-logger/: CMakeLists.txt
sources/psi-logger/psi/: CMakeLists.txt
sources/psi-logger/psi/examples/1_Simple_Logger/: EntryPoint.cpp
sources/psi-logger/psi/include/psi/: app_config.h
sources/psi-logger/psi/include/psi/logger/: LoggerBase.h
sources/psi-logger/psi/src/psi/logger/: LoggerSingleton.cpp  ThreadMap.cpp
tests/: EntryPoint.cpp
